# Balanced-Randomness-Engine

./: CMakeLists.txt  README.md
source/: BREngine.cpp  BREngine.h  main.cpp
